# castra

./: .gitignore  AGENTS.md  BASE_HARNESS_PROMPT.md  BOOTSTRAP.md  BUS.md  CLEAN.md  Cargo.toml  LIBRARY.md  OPERATIONAL.md  README.md  SEAMLESS.md  alpine-make-vm-image  build.rs  setup_vhd.sh  vm_commands.sh
.vizier/: .snapshot  todo_agent_first_interaction_model.md  todo_bootstrap_pipeline_remove_broker_handshake.md  todo_bootstrap_post_boot_pipeline.md  todo_bootstrap_post_boot_pipeline.md.md  todo_broker_guest_handshake_reachable.md  todo_broker_guest_handshake_reachable.md.md  todo_broker_handshake_events.md  todo_broker_handshake_events.md.md  todo_bus_publish_subscribe.md  todo_bus_publish_subscribe.md.md  todo_busless_architecture_cutover_core.md  todo_busless_architecture_cutover_core.md.md  todo_busless_architecture_cutover_core.md.md.md  todo_clean_command.md  (+116 more)
castra-ui/: Cargo.toml  README.md
castra-ui/docs/: overview.md
castra-ui/docs/components/: message_log.md  prompt_shell.md  roster_sidebar.md  status_footer.md  vm_fleet.md
castra-ui/docs/dev/: consuming_event_contract.md
castra-ui/docs/reference/: attention_model.md
castra-ui/docs/tutorials/: first_up.md
castra-ui/src/: config_catalog.rs  main.rs  transcript.rs
castra-ui/src/app/: actions.rs  mod.rs
castra-ui/src/codex/: mod.rs
castra-ui/src/components/: message_log.rs  mod.rs  prompt_shell.rs  roster_sidebar.rs  shell.rs  status_footer.rs  vm_fleet.rs
castra-ui/src/controller/: command.rs
castra-ui/src/input/: prompt.rs
castra-ui/src/ssh/: mod.rs
castra-ui/src/state/: mod.rs
(+112 files in other folders)
