[package]
name = "castra"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.12"
libc = "0.2.153"
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
ureq = { version = "2.9", default-features = true }

[dev-dependencies]
regex = "1.10"
"temp-env" = "0.3.6"
tempfile = "3.10"
