[package]
name = "castra-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.0"
unicode-segmentation = "1.12.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
castra = { path = "../castra-core", default-features = false }
async-channel = "1.9"
ctrlc = "3"
castra-harness = { path = "../castra-harness" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
